# LangChainUpdatedConcepts

./: .gitignore  pyproject.toml  requirements.txt
updatedLangchain/: Batching.ipynb  ExternalTools.ipynb  LLM_Integration.ipynb  Messages.ipynb  StructruredOutputUsingTypedDict.ipynb  StructuredOutput.ipynb  StructuredusingDataClasses.ipynb  agent.ipynb  agents.ipynb  callingToolsusingAgents.ipynb  intro.ipynb  middleware.ipynb  streamingandBatching.ipynb  tools.ipynb
