[project]
name = "langchainupdated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.6",
    "langchain-tavily>=0.2.16",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "wikipedia>=1.4.0",
]
